<resources>
    <string name="app_name">FlicBuzz</string>
    <string name="title_activity_landing_page">Latest Bollywood News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_about_us">About FlicBuzz</string>
    <string name="nav_fav">My Favourites</string>
    <string name="nav_home">Home</string>
    <string name="nav_package">Packages</string>
    <string name="nav_package_razor">Packages Razor</string>
    <string name="nav_privacy">Privacy Policy</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_refund">Refund &amp; Cancellation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share_app">Share the App</string>
    <string name="nav_terms">Terms of Use</string>
    <string name="nav_feedback">Contact Us</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="nav_logout">Logout</string>
    <string name="version">Version: v1.0</string>
    <string name="fullaccess">1 Year access \u20B9 361/-</string>
    <string name="fullaccesstext">at jsut \u20B9 361/- Per year</string>
    <string name="limitedacces">10 days access \u20B9 10/-</string>
    <string name="limitedaccestext">Get 10 days Unlimited access @ \u20B9 10/-</string>
    <string name="limitedaccestext_new">Get 1 year Unlimited access @ \u20B9 150/-</string>
    <string name="threemonth">\u20B9 190/-</string>
    <string name="sixmonth">\u20B9 280/-</string>
    <string name="oneyear">\u20B9 460/-</string>
    <string name="oneyear_latest">\u20B9 150/-</string>
    <string name="submit">SUBMIT</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="empty_screen">Oops!! An unexpected error occurred</string>
    <string name="please_retry">Please retry after sometime</string>
    <string name="retry">Retry</string>
    <string name="default_notification_channel_id">default</string>
</resources>
