<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <include layout="@layout/toolbar"   />
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/toolbarrl"
                    android:id="@+id/screenLayout"
                    android:background="@mipmap/bg_package">

        <LinearLayout android:layout_width="match_parent"
                      android:gravity="left"
                      android:id="@+id/plan_details"
                      android:visibility="gone"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
            <TextView android:textSize="20sp"
                      android:id="@+id/plan_text"
                      android:layout_marginTop="20dp"
                      android:layout_margin="15dp"
                      android:textColor="@color/payment_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text=""
                      android:fontFamily="@font/cera_gr_bold"/>
        </LinearLayout>
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:padding="5dp"
                                                     android:id="@+id/oneyear"
                                                     android:layout_alignParentBottom="true"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginBottom="267dp">

            <TextView android:layout_width="fill_parent" android:layout_height="79dp"
                      android:text="1 Year"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:gravity="center"
                      android:fontFamily="@font/cera_gr_black"
                      android:textStyle="bold"
                      android:background="@mipmap/pack_greenbtn" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginTop="32dp" tools:layout_editor_absoluteX="10dp"
                      tools:ignore="MissingConstraints" android:id="@+id/textView1"/>
            <LinearLayout android:layout_width="0dp" android:background="@mipmap/pack_countbg"
                          android:layout_alignParentLeft="true"
                          android:gravity="center"
                          android:orientation="vertical"
                          android:layout_height="90dp"
                          app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginBottom="24dp"
                          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginLeft="1dp" android:layout_marginStart="1dp"
                          app:layout_constraintVertical_bias="1.0">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="Package"
                          android:fontFamily="@font/cera_gr_bold"
                          android:textColor="@color/colorAccent"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:fontFamily="@font/cera_black"
                          android:textStyle="bold"
                          android:text="01"
                          android:textSize="25dp"/>

            </LinearLayout>
            <TextView android:layout_width="90dp" android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:text="@string/oneyear"
                      android:textStyle="bold"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:gravity="center"
                      android:fontFamily="@font/cera_gr_black"
                      android:layout_alignParentRight="true"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:background="@mipmap/pack_specialofferbg"
                      android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.92"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:padding="5dp"
                                                     android:id="@+id/sixmonths"
                                                     android:layout_alignParentBottom="true"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginBottom="140dp">

            <TextView android:layout_width="fill_parent" android:layout_height="79dp"
                      android:text="6 Months"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:gravity="center"
                      android:fontFamily="@font/cera_gr_black"
                      android:textStyle="bold"
                      android:background="@mipmap/pack_greenbtn" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginTop="32dp" tools:layout_editor_absoluteX="10dp"
                      tools:ignore="MissingConstraints" android:id="@+id/textView2"/>
            <LinearLayout android:layout_width="0dp" android:background="@mipmap/pack_countbg"
                          android:layout_alignParentLeft="true"
                          android:gravity="center"
                          android:orientation="vertical"
                          android:layout_height="90dp"
                          app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginBottom="24dp"
                          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginLeft="1dp" android:layout_marginStart="1dp"
                          app:layout_constraintVertical_bias="1.0">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="Package"
                          android:fontFamily="@font/cera_gr_bold"
                          android:textColor="@color/colorAccent"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:fontFamily="@font/cera_black"
                          android:textStyle="bold"
                          android:text="02"
                          android:textSize="25dp"/>

            </LinearLayout>
            <TextView android:layout_width="90dp" android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:text="@string/sixmonth"

                      android:textStyle="bold"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:gravity="center"
                      android:fontFamily="@font/cera_gr_black"
                      android:layout_alignParentRight="true"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:background="@mipmap/pack_specialofferbg"
                      android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.92"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:padding="5dp"
                                                     android:id="@+id/threemonths"
                                                     android:layout_alignParentBottom="true"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginBottom="20dp">

            <TextView android:layout_width="fill_parent" android:layout_height="79dp"
                      android:text="3 Months"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:gravity="center"
                      android:fontFamily="@font/cera_gr_black"
                      android:textStyle="bold"
                      android:background="@mipmap/pack_greenbtn" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginTop="32dp" tools:layout_editor_absoluteX="10dp"
                      tools:ignore="MissingConstraints" android:id="@+id/textView3"/>
            <LinearLayout android:layout_width="0dp" android:background="@mipmap/pack_countbg"
                          android:layout_alignParentLeft="true"
                          android:gravity="center"
                          android:orientation="vertical"
                          android:layout_height="90dp"
                          app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginBottom="24dp"
                          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginLeft="1dp" android:layout_marginStart="1dp"
                          app:layout_constraintVertical_bias="1.0">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="Package"
                          android:fontFamily="@font/cera_gr_bold"
                          android:textColor="@color/colorAccent"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:fontFamily="@font/cera_black"
                          android:textStyle="bold"
                          android:text="03"
                          android:textSize="25dp"/>

            </LinearLayout>
            <TextView android:layout_width="90dp" android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:text="@string/threemonth"
                      android:textStyle="bold"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:gravity="center"
                      android:fontFamily="@font/cera_gr_black"
                      android:layout_alignParentRight="true"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:background="@mipmap/pack_specialofferbg"
                      android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.93"/>
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</RelativeLayout>